fb plugin js priority, home header fix, fb plugin z-index 1

--- a/content/themes/enflight/assets/css/facebook-plugin.css
+++ b/content/themes/enflight/assets/css/facebook-plugin.css
@@ -18,3 +18,7 @@
 ._10b4 {
     max-height: 0px;
 }
+
+.fb_iframe_widget {
+    z-index: 1;
+}
