--- a/content/themes/enflight/assets/css/style.css
+++ b/content/themes/enflight/assets/css/style.css
@@ -591,7 +591,7 @@ body{
 		left:0;
 		margin-top:0em;
 		padding:3em 0;
-		background:no-repeat fixed center 100% / cover;
+		background:no-repeat fixed center / cover;
 		z-index:1}
 
 	#header .header-cover:before{
